# cpusim

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
_old/cmd/: cli.py  dis.py
cpusim/: __main__.py  parser.py  simulator.py  types.py
cpusim/architecture/: flags.py  memory.py  pc.py  registers.py
cpusim/backend/: instruction_sets.py  simulators.py
cpusim/backend/components/: __init__.py  alu.py  memory.py  registers.py
cpusim/backend/peripherals/: gpio.py  uart.py
cpusim/cmd/: cli.py  dis.py
cpusim/common/: types.py
cpusim/common/instructions/: base.py  utils.py
cpusim/common/instructions/v1a/: primary.py
cpusim/common/instructions/v1d/: primary.py  secondary.py
cpusim/components/: alu.py  memory.py  pc.py  registers.py
cpusim/frontend/cli/: __init__.py
cpusim/frontend/cli/interactive/: converters.py  parser.py  runner.py
cpusim/frontend/gui/: __init__.py  app.py  base.py
cpusim/frontend/gui/components/: treeview.py
cpusim/frontend/gui/frames/: breakpoints.py  flags.py  memory.py  registers.py  toolbar.py
cpusim/frontend/gui/frames/peripherals/: bug_trap.py
cpusim/instructions/: __init__.py  base.py  move.py  primary.py  secondary.py  utils.py
tests/: test_types.py
tests/backend/: test_simulators.py
tests/common/: test_parser.py  test_types.py
tests/common/instructions/: test_v1a.py  test_v1d.py
